--- a/drivers/clk/mediatek/Kconfig
+++ b/drivers/clk/mediatek/Kconfig
@@ -154,8 +154,8 @@ config COMMON_CLK_MT6735_MMSYS
 	depends on (ARCH_MEDIATEK && COMMON_CLK_MT6735) || COMPILE_TEST
 	select COMMON_CLK_MEDIATEK
 	help
-	  This enables a driver for clocks and resets provided
-	  by mmsys on the MediaTek MT6735 SoC.
+	  This enables a driver for clocks provided by mmsys on the
+	  MediaTek MT6735 SoC.
 
 config COMMON_CLK_MT6735_VDECSYS
 	tristate "Clock driver for MediaTek MT6735 VDECSYS"
