--- a/Documentation/devicetree/bindings/display/mediatek/mediatek,dsi.yaml
+++ b/Documentation/devicetree/bindings/display/mediatek/mediatek,dsi.yaml
@@ -24,6 +24,7 @@ properties:
   compatible:
     enum:
       - mediatek,mt2701-dsi
+      - mediatek,mt6735-dsi
       - mediatek,mt7623-dsi
       - mediatek,mt8167-dsi
       - mediatek,mt8173-dsi
