dt-bindings: display: mediatek: Document MT6735 display block compatible strings
Add compatible strings for all of OVL, RDMA, COLOR and DITHER blocks of MT6735.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/Documentation/devicetree/bindings/display/mediatek/mediatek,color.yaml
+++ b/Documentation/devicetree/bindings/display/mediatek/mediatek,color.yaml
@@ -24,6 +24,7 @@ properties:
     oneOf:
       - enum:
           - mediatek,mt2701-disp-color
+          - mediatek,mt6735-disp-color
           - mediatek,mt8167-disp-color
           - mediatek,mt8173-disp-color
       - items:
