--- a/Documentation/devicetree/bindings/display/mediatek/mediatek,dither.yaml
+++ b/Documentation/devicetree/bindings/display/mediatek/mediatek,dither.yaml
@@ -22,7 +22,9 @@ description: |
 properties:
   compatible:
     oneOf:
-      - const: mediatek,mt8183-disp-dither
+      - enum:
+          - mediatek,mt6735-disp-dither
+          - mediatek,mt8183-disp-dither
       - items:
           - enum:
               - mediatek,mt8186-disp-dither
