dt-bindings: pwm: mediatek,pwm-disp: Document MT6735 display PWM compatible string
Add a compatible string for the MT6735 display PWM block.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/Documentation/devicetree/bindings/pwm/mediatek,pwm-disp.yaml
+++ b/Documentation/devicetree/bindings/pwm/mediatek,pwm-disp.yaml
@@ -19,6 +19,7 @@ properties:
       - enum:
           - mediatek,mt2701-disp-pwm
           - mediatek,mt6595-disp-pwm
+          - mediatek,mt6735-disp-pwm
           - mediatek,mt8173-disp-pwm
           - mediatek,mt8183-disp-pwm
       - items:
