--- a/Documentation/devicetree/bindings/gpu/arm,mali-midgard.yaml
+++ b/Documentation/devicetree/bindings/gpu/arm,mali-midgard.yaml
@@ -25,6 +25,7 @@ properties:
       - items:
           - enum:
               - allwinner,sun50i-h6-mali
+              - mediatek,mt6735-mali
           - const: arm,mali-t720
       - items:
           - enum:
@@ -141,6 +142,14 @@ allOf:
           minItems: 2
       required:
         - resets
+  - if:
+      properties:
+          compatible:
+            contains:
+              const: mediatek,mt6735-mali
+      then:
+        required:
+          - power-domains
 
 examples:
   - |
