--- a/arch/arm64/boot/dts/mediatek/mt6735.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6735.dtsi
@@ -7,11 +7,17 @@
 
 #include <dt-bindings/interrupt-controller/irq.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
+#include <dt-bindings/clock/mediatek,mt6735-imgsys.h>
 #include <dt-bindings/clock/mediatek,mt6735-infracfg.h>
+#include <dt-bindings/clock/mediatek,mt6735-mmsys.h>
 #include <dt-bindings/clock/mediatek,mt6735-pericfg.h>
 #include <dt-bindings/clock/mediatek,mt6735-topckgen.h>
+#include <dt-bindings/clock/mediatek,mt6735-vdecsys.h>
+#include <dt-bindings/clock/mediatek,mt6735-vencsys.h>
+#include <dt-bindings/memory/mediatek,mt6735-m4u.h>
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/pinctrl/mediatek,mt6735-pinctrl.h>
+#include <dt-bindings/power/mediatek,mt6735-scpsys.h>
 #include <dt-bindings/reset/mediatek,mt6735-infracfg.h>
 #include <dt-bindings/reset/mediatek,mt6735-pericfg.h>
 
@@ -191,6 +197,21 @@
 				     "mediatek,mt6795-systimer";
 			reg = <0 0x10200670 0 0x8>;
 			clocks = <&system_clk>;
+		};
+
+		m4u: iommu@10205000 {
+			compatible = "mediatek,mt6735-m4u";
+			reg = <0 0x10205000 0 0x1000>;
+
+			interrupts = <GIC_SPI 146 IRQ_TYPE_LEVEL_LOW>;
+
+			clocks = <&infracfg CLK_M4U>;
+			clock-names = "bclk";
+
+			mediatek,larbs = <&smi_larb0>, <&smi_larb1>,
+					 <&smi_larb2>, <&smi_larb3>;
+
+			#iommu-cells = <1>;
 		};
 
 		apmixedsys: clock-controller@10209000 {
@@ -476,10 +497,47 @@
 			#reset-cells = <1>;
 		};
 
+		smi_larb0: memory-controller@14015000 {
+			compatible = "mediatek,mt6735-smi-larb";
+			reg = <0 0x14015000 0 0x1000>;
+
+			clocks = <&clk26m>,
+				 <&mmsys CLK_SMI_LARB0>;
+			clock-names = "apb", "smi";
+
+			power-domains = <&scpsys MT6735_POWER_DOMAIN_DIS>;
+
+			mediatek,smi = <&smi_common>;
+		};
+
+		smi_common: memory-controller@14016000 {
+			compatible = "mediatek,mt6735-smi-common";
+			reg = <0 0x14016000 0 0x1000>;
+
+			clocks = <&clk26m>,
+				 <&mmsys CLK_SMI_COMMON>;
+			clock-names = "apb", "smi";
+
+			power-domains = <&scpsys MT6735_POWER_DOMAIN_DIS>;
+		};
+
 		imgsys: syscon@15000000 {
 			compatible = "mediatek,mt6735-imgsys", "syscon";
 			reg = <0 0x15000000 0 0x1000>;
 			#clock-cells = <1>;
+		};
+
+		smi_larb2: memory-controller@15001000 {
+			compatible = "mediatek,mt6735-smi-larb";
+			reg = <0 0x15001000 0 0x1000>;
+
+			clocks = <&clk26m>,
+				 <&imgsys CLK_SMI_LARB2>;
+			clock-names = "apb", "smi";
+
+			power-domains = <&scpsys MT6735_POWER_DOMAIN_ISP>;
+
+			mediatek,smi = <&smi_common>;
 		};
 
 		vdecsys: syscon@16000000 {
@@ -489,10 +547,36 @@
 			#reset-cells = <1>;
 		};
 
+		smi_larb1: memory-controller@16010000 {
+			compatible = "mediatek,mt6735-smi-larb";
+			reg = <0 0x16010000 0 0x1000>;
+
+			clocks = <&clk26m>,
+				 <&vdecsys CLK_SMI_LARB1>;
+			clock-names = "apb", "smi";
+
+			power-domains = <&scpsys MT6735_POWER_DOMAIN_VDE>;
+
+			mediatek,smi = <&smi_common>;
+		};
+
 		vencsys: syscon@17000000 {
 			compatible = "mediatek,mt6735-vencsys", "syscon";
 			reg = <0 0x17000000 0 0x1000>;
 			#clock-cells = <1>;
+		};
+
+		smi_larb3: memory-controller@17001000 {
+			compatible = "mediatek,mt6735-smi-larb";
+			reg = <0 0x17001000 0 0x1000>;
+
+			clocks = <&clk26m>,
+				 <&vencsys CLK_SMI_LARB3>;
+			clock-names = "apb", "smi";
+
+			power-domains = <&scpsys MT6735_POWER_DOMAIN_VEN>;
+
+			mediatek,smi = <&smi_common>;
 		};
 	};
 };
