--- a/arch/arm64/boot/dts/mediatek/mt6737t-samsung-grandpplte.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6737t-samsung-grandpplte.dts
@@ -27,16 +27,6 @@
 		ranges;
 
 		stdout-path = "serial0:115200n8";
-
-		framebuffer: framebuffer@7f900000 {
-			compatible = "simple-framebuffer";
-			reg = <0 0x7f900000 0 ((540 + 4) * 960 * 4)>;
-			width = <540>;
-			height = <960>;
-			/* Lines have 4 pixels of padding at the end */
-			stride = <((540 + 4) * 4)>;
-			format = "a8r8g8b8";
-		};
 	};
 
 	memory@40000000 {
@@ -44,20 +34,35 @@
 		reg = <0 0x40000000 0 0x5f530000>;
 	};
 
+	backlight: pwm-backlight {
+		compatible = "pwm-backlight";
+
+		pwms = <&disp_pwm 0 5000000>;
+		enable-gpios = <&pio 7 GPIO_ACTIVE_HIGH>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&backlight_default>;
+
+		brightness-levels = <0 1023>;
+		num-interpolated-steps = <1023>;
+		default-brightness-level = <576>;
+	};
+
 	reserved-memory {
 		ramoops@43f10000 {
 			compatible = "ramoops";
 			reg = <0 0x43f10000 0 0xe0000>;
 		};
+	};
 
-		/*
-		 * Bootloader-configured framebuffer has 3 layers,
-		 * the first of which is used by simple-framebuffer.
-		 */
-		fb_mem: memory@7f900000 {
-			reg = <0 0x7f900000 0 (((540 + 4) * 960 * 4) * 3)>;
-			no-map;
-		};
+	vdd_lcd_3p0: regulator-vdd-lcd-3p0 {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_lcd_3p0";
+		regulator-min-microvolt = <3000000>;
+		regulator-max-microvolt = <3000000>;
+		startup-delay-us = <80>;
+		gpio = <&pio 184 0>;
+		enable-active-high;
 	};
 
 	vdd_tflash: regulator-vdd-tflash {
@@ -103,6 +108,65 @@
 	};
 };
 
+&color {
+	status = "okay";
+};
+
+&disp_mutex {
+	status = "okay";
+};
+
+&disp_pwm {
+	status = "okay";
+};
+
+&disp_rdma0 {
+	status = "okay";
+};
+
+&dither {
+	status = "okay";
+};
+
+&dsi {
+	status = "okay";
+
+	panel: panel@0 {
+		compatible = "samsung,s6d78a0-gh9607501a";
+		reg = <0>;
+
+		reset-gpios = <&pio 146 GPIO_ACTIVE_LOW>;
+
+		vdd-supply = <&vdd_lcd_3p0>;
+		vddio-supply = <&mt6328_vio18_reg>;
+
+		backlight = <&backlight>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&panel_default>;
+
+		port {
+			panel_in: endpoint {
+				remote-endpoint = <&dsi0_out>;
+			};
+		};
+	};
+};
+
+&dsi0_out {
+	remote-endpoint = <&panel_in>;
+};
+
+&gpu {
+	status = "okay";
+
+	mali-supply = <&mt6328_vcore1_reg>;
+};
+
+&mipi_tx {
+	status = "okay";
+};
+
 /* Touchscreen supply. TODO: Add regulator handling to zinitix driver */
 &mt6328_vgp1_reg {
 	regulator-always-on;
@@ -118,7 +182,27 @@
 	linux,keycodes = <KEY_VOLUMEDOWN>;
 };
 
+&ovl {
+	status = "okay";
+};
+
 &pio {
+	backlight_default: backlight-default-pins {
+		pins-pwm {
+			pinmux = <PINMUX_GPIO69__FUNC_DISP_PWM>;
+		};
+
+		pins-en {
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
+		};
+	};
+
+	panel_default: panel-default-pins {
+		pins-reset {
+			pinmux = <PINMUX_GPIO146__FUNC_GPIO146>;
+		};
+	};
+
 	vdd_tflash_default: vdd-tflash-default-pins {
 		pins-ce {
 			pinmux = <PINMUX_GPIO19__FUNC_GPIO19>;
