--- a/arch/arm64/boot/dts/mediatek/mt6735.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6735.dtsi
@@ -466,5 +466,11 @@
 			#clock-cells = <1>;
 			#reset-cells = <1>;
 		};
+
+		imgsys: syscon@15000000 {
+			compatible = "mediatek,mt6735-imgsys", "syscon";
+			reg = <0 0x15000000 0 0x1000>;
+			#clock-cells = <1>;
+		};
 	};
 };
