arm64: dts: mediatek: mt6735: Add VENCSYS
Add a node for the video encoding system available on MT6735.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/arch/arm64/boot/dts/mediatek/mt6735.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6735.dtsi
@@ -479,5 +479,11 @@
 			#clock-cells = <1>;
 			#reset-cells = <1>;
 		};
+
+		vencsys: syscon@17000000 {
+			compatible = "mediatek,mt6735-vencsys", "syscon";
+			reg = <0 0x17000000 0 0x1000>;
+			#clock-cells = <1>;
+		};
 	};
 };
