--- a/arch/arm64/boot/dts/mediatek/mt6735.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6735.dtsi
@@ -509,6 +509,13 @@
 			status = "disabled";
 		};
 
+		mfgsys: syscon@13000000 {
+			compatible = "mediatek,mt6735-mfgsys", "syscon";
+			reg = <0 0x13000000 0 0x1000>;
+			#clock-cells = <1>;
+			#reset-cells = <1>;
+		};
+
 		mmsys: syscon@14000000 {
 			compatible = "mediatek,mt6735-mmsys", "syscon";
 			reg = <0 0x14000000 0 0x1000>;
