--- a/arch/arm64/boot/dts/mediatek/mt6737t-samsung-grandpplte.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6737t-samsung-grandpplte.dts
@@ -53,6 +53,13 @@
 		};
 	};
 
+	haptics {
+		compatible = "regulator-haptic";
+		haptic-supply = <&mt6328_vibr_reg>;
+		max-microvolt = <3300000>;
+		min-microvolt = <3300000>;
+	};
+
 	backlight: pwm-backlight {
 		compatible = "pwm-backlight";
 
